<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/frameButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="50dp"
        android:background="@drawable/bottom_rounded_background"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2">

        <ImageView
            android:id="@+id/iv_list_item"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/img_maps_bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_line_horizontal_" />

        <TextView
            android:id="@+id/text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/earthquake_list"
            android:textSize="13sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/ivSearch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/light_blue"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/btn_search"
            android:src="@drawable/ic_search_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="50dp"
            android:text="@string/search_by_city"
            android:textColor="@color/grey_300"
            android:textSize="15sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
