<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    android:backgroundTint="@color/teal_700"
    app:cardElevation="2dp"
    app:cardMaxElevation="1dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/rowItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="302dp" />

        <TextView
            android:id="@+id/tvMagnitude"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/magnitude"
            android:textColor="#9EB23B"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_horizontal2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:textSize="16sp"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMagnitude"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/earthquake_text" />

        <TextView
            android:id="@+id/tvItemPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:textSize="14sp"
            android:textColor="@color/green_500"
            app:layout_constraintStart_toStartOf="@+id/tvItemTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvItemTitle"
            tools:text="@string/published_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>